--- a/app/src/main/res/layout/status_panel.xml
+++ b/app/src/main/res/layout/status_panel.xml
@@ -23,19 +23,22 @@
   -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:id="@+id/status_container"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="?attr/colorPrimary"
               android:gravity="center_vertical"
               android:minHeight="?attr/actionBarSize"
-              android:orientation="vertical"
-              android:padding="5dp">
+              android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
+        android:paddingTop="5dp">
 
         <com.nextgis.mobile.util.AutoFitTextView
             android:id="@+id/tv_latitude"
@@ -53,7 +56,10 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:gravity="center"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:paddingBottom="5dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp">
 
         <com.nextgis.mobile.util.AutoFitTextView
             android:id="@+id/tv_source"
@@ -77,4 +83,11 @@
             android:drawableLeft="@drawable/ic_speed"
             android:drawableStart="@drawable/ic_speed"/>
     </LinearLayout>
+
+    <View
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="1dip"
+        android:background="@color/color_grey_400"/>
+
 </LinearLayout>
