--- a/app/src/main/res/xml/preferences_map.xml
+++ b/app/src/main/res/xml/preferences_map.xml
@@ -25,9 +25,9 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <ListPreference
         android:defaultValue="0"
-        android:key="show_status_panel"
         android:entries="@array/status_panel_mode"
         android:entryValues="@array/status_panel_mode_val"
+        android:key="show_status_panel"
         android:title="@string/show_status_panel"/>
 
     <ListPreference
@@ -54,6 +54,11 @@
         android:summary="@string/show_zoom_controls_summary"
         android:title="@string/show_zoom_controls"/>
 
+    <CheckBoxPreference
+        android:defaultValue="true"
+        android:key="show_scale_ruler"
+        android:title="@string/show_scale_ruler"/>
+
     <ListPreference
         android:defaultValue="0"
         android:dialogTitle="@string/select_coordinates_format"
@@ -76,7 +81,7 @@
         android:entryValues="@array/map_bg_val"
         android:key="map_bg"
         android:title="@string/map_bg"/>
-bui/blob/master/src/main/res/values/arrays.xml#L107
+    bui/blob/master/src/main/res/values/arrays.xml#L107
     <com.nextgis.mobile.dialog.SelectMapPathDialogPreference
         android:dialogTitle="@string/select_map_path"
         android:key="map_path"
