--- a/app/src/main/res/menu/add_layer.xml
+++ b/app/src/main/res/menu/add_layer.xml
@@ -31,7 +31,7 @@
 
     <item
         android:id="@+id/menu_add_remote"
-        android:title="@string/action_add_remote"/>
+        android:title="@string/create_qms_layer"/>
 
     <item
         android:id="@+id/menu_add_ngw"
