--- a/app/src/main/res/layout/layout_refresh.xml
+++ b/app/src/main/res/layout/layout_refresh.xml
@@ -22,9 +22,14 @@
   ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
   -->
 
-<ProgressBar style="@style/Widget.AppCompat.ProgressBar"
-             xmlns:android="http://schemas.android.com/apk/res/android"
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:paddingBottom="16dp"
-             android:paddingTop="16dp"/>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             android:layout_width="48dp"
+             android:layout_height="?attr/actionBarSize">
+
+    <ProgressBar
+        android:id="@+id/progress"
+        style="@style/Widget.AppCompat.ProgressBar"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:layout_gravity="center"/>
+</FrameLayout>
