--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -23,7 +23,8 @@
   -->
 
 <RelativeLayout
-    android:id="@+id/maprl"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/maprl"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -169,4 +170,21 @@
             fab:fab_icon="@drawable/ic_action_maps_place"
             fab:fab_size="mini"/>
     </com.getbase.floatingactionbutton.FloatingActionsMenu>
+
+    <ImageView
+            android:id="@+id/test_image"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_centerHorizontal="true"
+            />
+
+    <Button
+            android:id="@+id/test_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Test"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@id/test_image"
+            />
+
 </RelativeLayout>
