Update support library version

--- a/app/src/main/res/layout/activity_new_layer.xml
+++ b/app/src/main/res/layout/activity_new_layer.xml
@@ -81,6 +81,7 @@
                 android:adjustViewBounds="true"
                 android:background="@null"
                 android:src="@drawable/ic_plus"
+                android:tint="@color/accent"
                 tools:ignore="ContentDescription"/>
         </LinearLayout>
 
