Native map view

--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -29,4 +29,6 @@
           type="id"/>
     <item name="map_view"
           type="id"/>
+    <item name="map_view_native"
+          type="id"/>
 </resources>
