--- a/app/src/main/res/menu/add_layer.xml
+++ b/app/src/main/res/menu/add_layer.xml
@@ -4,7 +4,7 @@
   ~ Purpose:  Mobile GIS for Android.
   ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
   ~ *****************************************************************************
-  ~ Copyright (c) 2016 NextGIS, info@nextgis.com
+  ~ Copyright (c) 2016-2017 NextGIS, info@nextgis.com
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU General Public License as published by
@@ -35,5 +35,5 @@
 
     <item
         android:id="@+id/menu_add_ngw"
-        android:title="@string/add_nextgis"/>
+        android:title="@string/ngw_layer_add"/>
 </menu>
