--- a/app/src/main/res/xml/preference_headers_legacy.xml
+++ b/app/src/main/res/xml/preference_headers_legacy.xml
@@ -6,7 +6,7 @@
   ~ Author:   NikitaFeodonit, nfeodonit@yandex.com
   ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
   ~ ******************************************************************************
-  ~ Copyright (c) 2012-2016 NextGIS, info@nextgis.com
+  ~ Copyright (c) 2012-2017 NextGIS, info@nextgis.com
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU General Public License as published by
@@ -47,10 +47,16 @@
             android:targetClass="com.nextgis.mobile.activity.SettingsActivity"
             android:targetPackage="com.nextgis.mobile"/>
     </Preference>
-    <Preference android:title="@string/ngw_settings">
+    <Preference android:title="@string/ngw_accounts">
         <intent
             android:action="com.nextgis.mobile.PREFS_NGW"
-            android:targetClass="com.nextgis.mobile.activity.NGWSettingsActivityProxy"
+            android:targetClass="com.nextgis.maplibui.activity.NGWSettingsActivity"
+            android:targetPackage="com.nextgis.mobile"/>
+    </Preference>
+    <Preference android:title="@string/ngid_settings">
+        <intent
+            android:action="com.nextgis.mobile.PREFS_NGID"
+            android:targetClass="com.nextgis.maplibui.activity.NGIDSettingsActivity"
             android:targetPackage="com.nextgis.mobile"/>
     </Preference>
 </PreferenceScreen>
