--- a/app/src/main/res/drawable/point_indigo.xml
+++ b/app/src/main/res/drawable/point_indigo.xml
@@ -20,20 +20,6 @@
   ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
   -->
 
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/color_grey_050"
-    android:gravity="center_horizontal"
-    android:orientation="vertical"
-    tools:ignore="UseCompoundDrawables">
-
-    <fragment
-        android:id="@+id/login_screen"
-        android:name="com.nextgis.maplibui.fragment.NGIDLoginFragment"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:layout="@layout/fragment_ngid_login"/>
-</FrameLayout>
+<bitmap xmlns:android="http://schemas.android.com/apk/res/android"
+        android:src="@drawable/ic_type_point"
+        android:tint="@color/intro_indigo"/>
