--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,20 +20,9 @@
   ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
   -->
 
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/color_grey_050"
-    android:gravity="center_horizontal"
-    android:orientation="vertical"
-    tools:ignore="UseCompoundDrawables">
-
-    <fragment
-        android:id="@+id/login_screen"
-        android:name="com.nextgis.maplibui.fragment.NGIDLoginFragment"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:layout="@layout/fragment_ngid_login"/>
-</FrameLayout>
+<resources>
+    <color name="intro_yellow">#FFE81E</color>
+    <color name="intro_indigo">#9900CF</color>
+    <color name="intro_blue">#073F9E</color>
+    <color name="intro_red">#FF5A58</color>
+</resources>
